Bug #2755 - On small iphones, gradebook table background color needs adjustment
- expanding original fix to desktop, as it turns out the issue appears there too

--- a/wp-content/plugins/openlab-gradebook/GradeBook.less
+++ b/wp-content/plugins/openlab-gradebook/GradeBook.less
@@ -711,9 +711,7 @@ span.twitter-typeahead {
 		#an-gradebook-container {
 			top: 15px;
 			position: relative;
-			@media (max-width: 991px) {
-				max-width: none;
-			}
+			max-width: none;
 		}
 		position: relative;
 		#students-header,
